@@ -1,3 +1,8 @@
+2005-05-20  Han-Wen Nienhuys  <hanwen@xs4all.nl>
+
+	* lily/slur-configuration.cc (score_encompass): oops, <? to min()
+	translation went wrong. Fixes vertically translated slurs.
+
 2005-05-19  Graham Percival  <gperlist@shaw.ca>
 
 	* Documentation/user/basic-notaton.itely: editing.
